--- a/cv.html
+++ b/cv.html
@@ -10,8 +10,8 @@ layout: null
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>{{ site.title }}</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-  <script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script> -->
+  <!-- <script>
     window.dataLayer = window.dataLayer || [];
 
     function gtag() {
@@ -21,7 +21,7 @@ layout: null
     gtag('js', new Date());
 
     gtag('config', '{{ site.google_analytics }}');
-  </script>
+  </script> -->
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link href="./css/fontawesome.all.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@ layout: null
           <h1 class="subtitle is-5">{{ site.position }}</h1>
         </div>
         <div class="column is-narrow portrait-column">
-          <img class="portrait-image" src="./images/portrait.jpg" alt="A portrait of Keunhong Park" />
+          <img class="portrait-image" src="./images/portrait.jpg" alt="A portrait of Sayan Nath" />
         </div>
         <div class="column has-text-right">
           <p>
